/**
\page changelog Changelog

\section c018 version 0.17 -> 0.17+

 - Disable unaligned access check alltogether; it doesn't work properly
   for some reason. (05-feb-2008, Camiel Vanderhoeven)
 - The new floating point code (21-jan-2008) has some unidentified
   problems. The OpenVMS installation routine fails with this new code. 
   For now, the old floating point code has been restored, and the new
   floating-point code is used only when HAVE_NEW_FP has been defined.
   The new code should be fixed, so we can take advantage of floating
   point exceptions. (05-feb-2008, Camiel Vanderhoeven)
 - Display a message when system initialization has failed. (05-feb-2008,
   Brian Wheeler)
 - Put X64 around 64-bit constants in DO_CVTQL. (compilation issue on some
   Linux'es) (05-feb-2008, Camiel Vanderhoeven)
 - Corrected a typo in the definition of PCI_PTE_SHIFT (2 should be 12)
   that caused an OpenVMS procgone bugcheck. (04-feb-2008, Camiel
   Vanderhoeven)
 - Completed LPT support so it works with FreeBSD as a guest OS. 
   (02-feb-2008, Brian Wheeler)
 - Avoid unnecessary shift-operations to calculate constant values. 
   (01-feb-2008, Camiel Vanderhoeven)
 - Improved speed by remembering the number of instructions left in current
   memory page, so that the translation-buffer doens't need to be consulted
   on every instruction fetch when the Icache is disabled. (30-jan-2008,
   Camiel Vanderhoeven)
 - Remember separate last found translation-buffer entries for read and write 
   operations. This should help with memory copy operations. (29-jan-2008,
   Camiel Vanderhoeven)
 - Avoid interrupts from the new IDE device that originated while interrupts
   were disabled. (29-jan-2008, Brian Wheeler)
 - Improved floating-point exception handling. (28-jan-2008, Camiel 
   Vanderhoeven)
 - Lifted hardcoded file-size limit of 10,000 bytes for config file. 
   (26-jan-2008, Camiel Vanderhoeven)
 - Bugfix in the VAX floating point STF and the IEEE floating point STS 